Renaming Server to Broker

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.10)
 project(chat-app)
 
-add_subdirectory(chat-server)
+add_subdirectory(chat-broker)
 add_subdirectory(chat-client)
