--- a/chat-broker/CMakeLists.txt
+++ b/chat-broker/CMakeLists.txt
@@ -1,6 +1,6 @@
 # server/CMakeLists.txt
 cmake_minimum_required(VERSION 3.10)
-project(chatserver)
+project(chatbroker)
 
 set(CMAKE_CXX_STANDARD 11)
 
@@ -9,5 +9,5 @@ find_package(Boost REQUIRED system)
 include_directories(${Boost_INCLUDE_DIRS})
 include_directories(${CMAKE_SOURCE_DIR}/chat-server)
 
-add_executable(chatserver chat_server_main.cc chat_server.cc)
-target_link_libraries(chatserver ${Boost_LIBRARIES} pthread)
+add_executable(chatbroker chat_broker_main.cc chat_broker.cc)
+target_link_libraries(chatbroker ${Boost_LIBRARIES} pthread)
