Making WebSocket client and Server interact with each other. ChatApp needs to integrated into this

--- a/chat-broker/CMakeLists.txt
+++ b/chat-broker/CMakeLists.txt
@@ -1,13 +1,13 @@
 # server/CMakeLists.txt
 cmake_minimum_required(VERSION 3.10)
-project(chatbroker)
+project(ChatServerBroker)
 
-set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD 17)
 
 find_package(Boost REQUIRED system)
 
 include_directories(${Boost_INCLUDE_DIRS})
 include_directories(${CMAKE_SOURCE_DIR}/chat-server)
 
-add_executable(chatbroker chat_broker_main.cc chat_broker.cc)
-target_link_libraries(chatbroker ${Boost_LIBRARIES} pthread)
+add_executable(ChatServerBroker chat_broker_main.cc chat_broker.cc)
+target_link_libraries(ChatServerBroker ${Boost_LIBRARIES} pthread)
